LMAO nvm Java 8 bad