@@ -29,9 +29,7 @@ public class ScriptReader
 
 	private static String tree()
 	{
-		//TODO: Java 11+
-//		return "    ".repeat(depth - 1);
-		return MyParser.repeat("\t", depth - 1);
+		return "    ".repeat(depth - 1);
 	}
 
 	public static Script readScript(String lines, Workspace workspace)
@@ -90,21 +88,15 @@ public class ScriptReader
 			String function = line.substring(line.indexOf('{'), line.lastIndexOf('}')).trim();
 
 			String[] args = arguments.split(",");
-			//TODO: Java 11+
-//			int i1 = arguments.isBlank() ? 0 : args.length;
-			int i1 = arguments.trim().isEmpty() ? 0 : args.length;
+			int i1 = arguments.isBlank() ? 0 : args.length;
 			Type[] types = new Type[i1];
 			String[] names = new String[i1];
 
-			//TODO: Java 11+
-//			if (!arguments.isBlank())
-			if (!arguments.trim().isEmpty())
+			if (!arguments.isBlank())
 			{
 				for (int i = 0; i < args.length; i++)
 				{
-					//TODO: Java 11+
-//					String[] arg = args[i].trim().split("\s+");
-					String[] arg = args[i].trim().split("\\s+");
+					String[] arg = args[i].trim().split("\s+");
 					types[i] = script.getWorkspace().getType(arg[0]);
 					names[i] = arg[1];
 				}
@@ -121,9 +113,7 @@ public class ScriptReader
 			depth--;
 			return new DeclareFunction(name, body, names, types);
 		}
-		//TODO: Java 11+
-//		else if (Pattern.compile("while\s*\\(.*\\).*").matcher(line).matches())
-		else if (Pattern.compile("while\\s*\\(.*\\).*").matcher(line).matches())
+		else if (Pattern.compile("while\s*\\(.*\\).*").matcher(line).matches())
 		{
 			depth++;
 			if (DEBUG)
@@ -151,9 +141,7 @@ public class ScriptReader
 			depth--;
 			return new While(anIf);
 		}
-		//TODO: Java 11+
-//		else if (Pattern.compile("if\s*\\(.+\\).*\\{.*\\}\s*else\s*\\{.*\\}").matcher(line).matches() && !isIf(line))
-		else if (Pattern.compile("if\\s*\\(.+\\).*\\{.*\\}\\s*else\\s*\\{.*\\}").matcher(line).matches() && !isIf(line))
+		else if (Pattern.compile("if\s*\\(.+\\).*\\{.*\\}\s*else\s*\\{.*\\}").matcher(line).matches() && !isIf(line))
 		{
 			depth++;
 			if (DEBUG)
@@ -178,9 +166,7 @@ public class ScriptReader
 				Log.reset();
 			}
 
-			//TODO: Java 11+
-//			if (Pattern.compile("if\s*\\(.+\\).*\\{.*\\}\s*else\s*\\{.*\\}").matcher(split[1]).matches())
-			if (Pattern.compile("if\\s*\\(.+\\).*\\{.*\\}\\s*else\\s*\\{.*\\}").matcher(split[1]).matches())
+			if (Pattern.compile("if\s*\\(.+\\).*\\{.*\\}\s*else\s*\\{.*\\}").matcher(split[1]).matches())
 			{
 				split[1] = split[1].substring(1, split[1].length() - 1).trim();
 			}
@@ -189,9 +175,7 @@ public class ScriptReader
 			depth--;
 			return new IfElse(anIf, expression);
 		}
-		//TODO: Java 11+
-//		else if (Pattern.compile("if\s*\\(.*\\).*").matcher(line).matches() && isIf(line))
-		else if (Pattern.compile("if\\s*\\(.*\\).*").matcher(line).matches() && isIf(line))
+		else if (Pattern.compile("if\s*\\(.*\\).*").matcher(line).matches() && isIf(line))
 		{
 			depth++;
 			if (DEBUG)
